added factor removal for heatmap

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -172,6 +172,138 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cell_type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>B_cell</th>\n",
+       "      <td>0.000312</td>\n",
+       "      <td>0.000524</td>\n",
+       "      <td>0.000775</td>\n",
+       "      <td>0.000262</td>\n",
+       "      <td>0.000527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cancer_cell</th>\n",
+       "      <td>0.000210</td>\n",
+       "      <td>0.000161</td>\n",
+       "      <td>0.003129</td>\n",
+       "      <td>0.000216</td>\n",
+       "      <td>0.000413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Endothelial_cell</th>\n",
+       "      <td>0.000455</td>\n",
+       "      <td>0.000416</td>\n",
+       "      <td>0.012433</td>\n",
+       "      <td>0.000218</td>\n",
+       "      <td>0.000741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fibroblast</th>\n",
+       "      <td>0.000321</td>\n",
+       "      <td>0.000325</td>\n",
+       "      <td>0.013529</td>\n",
+       "      <td>0.000158</td>\n",
+       "      <td>0.000120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mast_cell</th>\n",
+       "      <td>0.000247</td>\n",
+       "      <td>0.000619</td>\n",
+       "      <td>0.000439</td>\n",
+       "      <td>0.000284</td>\n",
+       "      <td>0.000469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Myeloid_cell</th>\n",
+       "      <td>0.000271</td>\n",
+       "      <td>0.001212</td>\n",
+       "      <td>0.000578</td>\n",
+       "      <td>0.000219</td>\n",
+       "      <td>0.000717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T_cell</th>\n",
+       "      <td>0.000297</td>\n",
+       "      <td>0.000331</td>\n",
+       "      <td>0.000659</td>\n",
+       "      <td>0.000416</td>\n",
+       "      <td>0.000524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pDC</th>\n",
+       "      <td>0.000207</td>\n",
+       "      <td>0.000131</td>\n",
+       "      <td>0.000281</td>\n",
+       "      <td>0.000324</td>\n",
+       "      <td>0.000561</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         1         2         3         4         5\n",
+       "cell_type                                                         \n",
+       "B_cell            0.000312  0.000524  0.000775  0.000262  0.000527\n",
+       "Cancer_cell       0.000210  0.000161  0.003129  0.000216  0.000413\n",
+       "Endothelial_cell  0.000455  0.000416  0.012433  0.000218  0.000741\n",
+       "Fibroblast        0.000321  0.000325  0.013529  0.000158  0.000120\n",
+       "Mast_cell         0.000247  0.000619  0.000439  0.000284  0.000469\n",
+       "Myeloid_cell      0.000271  0.001212  0.000578  0.000219  0.000717\n",
+       "T_cell            0.000297  0.000331  0.000659  0.000416  0.000524\n",
+       "pDC               0.000207  0.000131  0.000281  0.000324  0.000561"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[:,[1,2,3,4,5]]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
