--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,36 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\brian\\AppData\\Roaming\\Python\\Python39\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import our libraries\n",
-    "import sys\n",
-    "import json\n",
     "import pandas as pd\n",
+    "import tracemalloc\n",
     "import seaborn as sb\n",
-    "import sys\n",
-    "import PyQt5\n",
-    "import PyQt5.QtWidgets as qw\n",
-    "import PyQt5.QtCore as qc\n",
-    "import PyQt5.QtGui as qg\n",
     "from spectra import spectra as spc\n",
-    "import scanpy as sc\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib\n",
-    "%matplotlib qt\n",
-    "# from matplotlib import rcParams\n",
-    "# rcParams.update({'figure.autolayout': True})\n"
+    "import scanpy as sc\n"
    ]
   },
   {
@@ -46,92 +26,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n"
+      "(11555, 21401)\n",
+      "(1056, 11752)\n"
      ]
     }
    ],
    "source": [
-    "for x in adata.obs_keys():\n",
+    "tracemalloc.start()\n",
     "\n",
-    "    print(adata.obs[x].dtype == type(\"category\"))\n"
+    "df = pd.DataFrame(columns=['iter', 'wall_time', 'cpu_time'])\n",
+    "df['iter'] = [0,1,2,3,4]\n",
+    "df.at[0, 'wall_time'] = 1\n",
+    "\n",
+    "print(tracemalloc.get_traced_memory())\n",
+    "\n",
+    "del df\n",
+    "\n",
+    "tracemalloc.stop()\n",
+    "tracemalloc.start()\n",
+    "\n",
+    "x = 1\n",
+    "y = [2,4,5,6,67,78,7,5,64,456,45,6]\n",
+    "\n",
+    "print(tracemalloc.get_traced_memory())\n",
+    "tracemalloc.stop()"
    ]
   },
   {
@@ -150,11 +75,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "test = \n",
-    "\n",
-    "\"Bassez_cellType\" in test"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -302,39 +223,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\brian\\AppData\\Local\\Temp\\ipykernel_7476\\2186610671.py:6: MatplotlibDeprecationWarning: Auto-removal of grids by pcolor() and pcolormesh() is deprecated since 3.5 and will be removed two minor releases later; please call grid(False) first.\n",
-      "  g.figure.colorbar(g.ax_heatmap.collections[0], ax = g.ax_heatmap, location = 'bottom')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x26033ce9e50>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g = sb.clustermap(df, row_cluster = False, xticklabels = 0, col_cluster = True, cbar_pos = None, dendrogram_ratio = (0, 0.2), standard_scale = 0, linewidth = 0, figsize=(6,4))\n",
-    "\n",
-    "g.ax_heatmap.set_xlabel(\"Factors\")\n",
-    "g.ax_heatmap.set_ylabel(\"Cell type\")\n",
-    "\n",
-    "g.figure.colorbar(g.ax_heatmap.collections[0], ax = g.ax_heatmap, location = 'bottom')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -387,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
