Fixed some bugs, allow json upload, multithread model building, design improvements, point size and epoch parameters

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,72 +10,61 @@
     "import pandas as pd\n",
     "import tracemalloc\n",
     "import seaborn as sb\n",
-    "from spectra import spectra as spc\n",
-    "import scanpy as sc\n"
+    "import scanpy as sc\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "adata = sc.read_h5ad(\"../new_data.h5ad\")\n",
-    "\n"
+    "\n",
+    "annotations = (json.load(open(\"../spectra-gpu/data/Spectra_dict.json\")))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(11555, 21401)\n",
-      "(1056, 11752)\n"
-     ]
-    }
-   ],
-   "source": [
-    "tracemalloc.start()\n",
-    "\n",
-    "df = pd.DataFrame(columns=['iter', 'wall_time', 'cpu_time'])\n",
-    "df['iter'] = [0,1,2,3,4]\n",
-    "df.at[0, 'wall_time'] = 1\n",
-    "\n",
-    "print(tracemalloc.get_traced_memory())\n",
-    "\n",
-    "del df\n",
-    "\n",
-    "tracemalloc.stop()\n",
-    "tracemalloc.start()\n",
-    "\n",
-    "x = 1\n",
-    "y = [2,4,5,6,67,78,7,5,64,456,45,6]\n",
-    "\n",
-    "print(tracemalloc.get_traced_memory())\n",
-    "tracemalloc.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "150"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "len(annotations[\"global\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['B_cell', 'T_cell', 'Myeloid_cell', 'Cancer_cell', 'pDC', 'Mast_cell', 'Fibroblast', 'Endothelial_cell']\n",
+       "Categories (8, object): ['B_cell', 'Cancer_cell', 'Endothelial_cell', 'Fibroblast', 'Mast_cell', 'Myeloid_cell', 'T_cell', 'pDC']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata.obs[\"Bassez_cellType\"].unique()"
+   ]
   },
   {
    "cell_type": "code",
