yaml config support

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,42 @@
     "import seaborn as sb\n",
     "import scanpy as sc\n",
     "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('config.yaml', 'r') as file:\n",
+    "    config = yaml.safe_load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spectra GPU support is still under development. Raise any issues on github \n",
+      " \n",
+      " Changes from v1: \n",
+      " (1) GPU support [see tutorial] \n",
+      " (2) minibatching for local parameters and data \n",
+      " Note that minibatching may affect optimization results \n",
+      " Code will eventually be merged into spectra.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import sys, os\n",
+    "sys.path.append(os.path.join(os.path.dirname(sys.path[0]),'spectra'))\n",
+    "from spectra import spectra_gpu as spc"
    ]
   },
   {
@@ -27,22 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "150"
+       "1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(annotations[\"global\"])"
+    "len({'hi': [\"joe\"]})"
    ]
   },
   {
